# diamond

./: CMakeLists.txt  README.md
source/: Diamond.cpp  DiamondTestSuite.cpp
